RichwoodNew/src/objects/User_Stories__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Owner__c</fullName>
        <label>Dev Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jay Armstrong</fullName>
                </value>
                <value>
                    <fullName>Matt McCarthy</fullName>
                </value>
                <value>
                    <fullName>Seth Stoll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Dev in Progress</fullName>
                </value>
                <value>
                    <fullName>Dev Complete</fullName>
                </value>
                <value>
                    <fullName>QA in Progress</fullName>
                </value>
                <value>
                    <fullName>QA Complete</fullName>
                </value>
                <value>
                    <fullName>UAT in Progress</fullName>
                </value>
                <value>
                    <fullName>UAT Complete</fullName>
                </value>
                <value>
                    <fullName>Ready to Deploy</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Deployed - Open Issues</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Name__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Demonstration__c</fullName>
        <label>Video Demonstration</label>
        <type>Url</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Story_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Stories</fullName>
        <columns>Story_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>User Stories</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>User Stories Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>